# changie-ai-backend

./: .gitignore  Dockerfile  LICENSE  README.md  _pyllmodel_backup.py  api.py  app.py  build.sh  convert_m4a_to_wav.py  effects_engine.py  fly.toml  list_params.py  local_main.py  main.py  prompt_parser.py  pyproject.toml  requirements-fly.txt  requirements.txt  revChat.py  test_pedal.py  test_upload.py  test_upload_app.py  test_vst.py  test_vst_debug.py  vst.py  vst_loader.py
.github/workflows/: fly-deploy.yml
effects/: aa_fx.py  autotune.py  hype_delay.py  sick_verb.py  space_mod.py  tempo_tweak.py
frontend/: index.html
uploads/: audiofile.m4a
wheels/: OpenAIAuth-3.0.0-py3-none-any.whl  jiter-0.12.0-cp313-cp313-macosx_10_12_x86_64.whl  numba-0.62.1-cp313-cp313-macosx_10_15_x86_64.whl  openai-2.8.0-py3-none-any.whl  pedalboard-0.9.19-cp313-cp313-macosx_10_14_x86_64.whl  pipdeptree-2.30.0-py3-none-any.whl  pyrubberband-0.4.0-py3-none-any.whl  regex-2025.11.3-cp313-cp313-macosx_10_13_x86_64.whl  soundfile-0.13.1-py2.py3-none-macosx_10_9_x86_64.whl  soxr-1.0.0-cp312-abi3-macosx_10_14_x86_64.whl
