[tool.poetry]
name = "changie-ai-backend"
version = "0.1.0"
description = "AI backend for ChangieAI"
authors = ["Matt <matt@changie-ai.com>"]

[tool.poetry.dependencies]
pyrubberband = "==0.4.0"
python = "^3.13"
fastapi = "^0.105.0"
uvicorn = "^0.23.2"
imageio-ffmpeg = "^0.6.0"
requests = "^2.32.5"
python-multipart = "^0.0.6"
librosa = "^0.11.0"
soundfile = "^0.13.1"
numpy = "^2.3.4"
scipy = "^1.16.3"
pydub = "^0.25.1"
matplotlib = "^3.10.7"
pedalboard = "^0.9.19"
sounddevice = "^0.5.3"
openai = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

